<resources>
    <string name="app_name">CurrentInfo</string>
    <string name="info_title_hint">Enter a title for the note.</string>
    <string name="info_title_label">Title</string>
    <string name="info_details_label">Details</string>
    <string name="info_sent_label">Sent?</string>
    <string name="was_sent">Was sent.</string>
    <string name="date_picker_title">Date:</string>

    <string name="new_info">New Data</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s [data points]</string>
    <string name="not_sent">Not sent. </string>
    <string name="info_delete">Delete</string>
    <string name="return_dialog">Return</string>
    <string name="sure_delete">Are you sure delete this data?</string>
    <string name="info_report_text">Send</string>

    <string name="photo_was_taken">Photo was taken</string>
    <string name="To_increase">To increase</string>

    <string-array name="titles">
        <item>Home</item>
        <item>Weather</item>
        <item>Maps</item>
    </string-array>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="pressure">Pressure </string>
    <string name="humidity">Humidity </string>
    <string name="rain_volume_for_the_last_3_hours">Rain volume for the last 3 hours</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="sunrise_time">Sunrise</string>
    <string name="sunset_time">Sunset</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction, degrees </string>
    <string name="clouds">Cloudiness</string>
    <string name="weather_more_inform"> More information</string>
    <string name="title_activity_maps">Map</string>
    <string name="cancel">Cancel</string>

    <string name="GPSAlertDialogTitle">Gps alert</string>
    <string name="GPSAlertDialogMessage">dialog message</string>
    <string name="action_settings">Settings</string>
    <string name="textwarn">Warn</string>
    <string name="settings">Settings</string>
</resources>
